# object_pose_estimation

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
launch/: stereo_rgbdslam.launch
scripts/: train_from_bagfile.py
src/: feature_matching_detector_node.cpp  features_io.h  features_to_pcd.cpp
