<package>
  <name>object_pose_estimation</name>
  <version>0.0.1</version>
  <description>3D Object pose estimation</description>
  <author>Stephan Wirth</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/srv/object_pose_estimation</url>
  <url type="bugtracker">https://github.com/srv/object_pose_estimation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>bag_tools</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>bag_tools</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>